# checkagent-testbed

./: .gitignore  PERSONA.txt  README.md  SYSTEM.txt  SYSTEM_PROMPT.txt  checkagent.yml  checkagent_target.py  echo_agent.py  instruction.txt  persona.txt  pyproject.toml  system_prompt.txt
.github/workflows/: checkagent.yml
.notes/: findings.md  journal.md  scores.md
agents/: booking_agent.py  echo_agent.py  echo_agent_040.py  echo_agent_simple.py  error_agent.py  erroring_agent.py  langchain_lcel_agent.py  langchain_lcel_class_agent.py  langchain_qa_agent.py  partial_error_agent.py  pydantic_ai_agent.py  refusal_agent.py  travel_agent.py
datasets/imported/: traces.json  (+1 more)
prompts/: hr_agent.txt  secure_hr_agent.txt
scan_agents/: async_agent.py  dict_return.py  safe.py  simple.py
tests/: test_booking.py  test_conversation.py  test_echo.py  test_faults.py  test_new_assertions.py  test_session004.py  test_session005.py  test_session006.py  test_session007.py  test_session008.py  test_session009.py  test_session010.py  test_session011.py  test_session012.py  test_session013.py  test_session014.py  test_session015.py  test_session016.py  test_session017.py  test_session018.py  test_session019.py  test_session020.py  test_session021.py  test_session022.py  test_session023.py  test_session024.py  test_session025.py  test_session026.py  test_session027.py  test_session028.py  test_session029.py  test_session030.py  test_session031.py  test_session032.py  test_session033.py  test_session034.py  test_session035.py  test_session036.py  test_session037.py  test_session038.py  (+42 more)
(+7 files in other folders)
