[project]
name = "checkagent-testbed"
version = "0.0.1"
description = "Customer-zero testbed for CheckAgent framework"
requires-python = ">=3.10"
dependencies = [
    "checkagent @ git+https://github.com/xydac/checkagent.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
